Header is not fixed anymore
When it was fixed, it overlap with other page elements while scrolling.
We agreed that it is not necessary to have it in a fixed position, because
the user can always scroll up (the home page is not long).

--- a/custom_assets/css/header.css
+++ b/custom_assets/css/header.css
@@ -1,10 +1,9 @@
 #masthead {
-  position: fixed;
   right: 0;
   left: 0;
-  margin: 0px 34px;
+  padding: 0px 34px;
   height: var(--header-height, 86px);
-  background-color: transparent;
+  background-color: var(--secondary-color-darker);
   z-index: 10;
 }
 
